--- a/.github/workflows/ci-service.yml
+++ b/.github/workflows/ci-service.yml
@@ -7,16 +7,5 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn clean package -Dmaven.test.skip=true
+  maven:
+    uses: shared-workflows/.github/workflows/java-backend.yml@main
