--- a/.github/workflows/ci-service.yml
+++ b/.github/workflows/ci-service.yml
@@ -6,6 +6,12 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_call:
+    inputs:
+      environment:
+      description: 'Skip test'
+      required: true
+      options: [true, false]
 
 jobs:
   maven:
